--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -1,4 +1,4 @@
-
+<% layout('/layouts/boilerplate') -%>
     <div class="container">
         <h1>Privacy Policy</h1>
         <p>At WanderLust, we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and protect your personal information.</p>
