--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -12,7 +12,7 @@
 
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
-            <a href="/privacy">Terms</a>
+            <a href="/terms">Terms</a>
         </div>
 
     </div>
